--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
 <br>
 いろいろなUI<fig-step>2 これこれをする</fig-step><br>
 
+<br>
+<br>
+<button>ボタン</button><fig-step>99 おおきな番号</fig-step><br>
+
 </body>
 </html>
