--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html><html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width">
 <title>数字の注釈追加 - fig-step</title>
+<link rel="stylesheet" href="https://unpkg.com/sakura.css/css/sakura.css" type="text/css">
 </head>
 <body>
 
@@ -14,7 +15,10 @@
 
 <br>
 <br>
-<button>ボタン</button><fig-step>99 おおきな番号</fig-step><br>
+<button onclick='document.location.href="?fig=on"'>数字注釈を表示</button><fig-step>3</fig-step><br>
+<br>
+<button onclick='document.location.href="?fig=off"'>数字注釈を消す</button><fig-step>99 おおきな番号</fig-step><br>
+
 
 </body>
 </html>
