--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 <br>
 <button onclick='document.location.href="?fig=off"'>数字注釈を消す</button><fig-step>99 おおきな番号</fig-step><br>
 
+<br>
+<a href=https://github.com/code4fukui/>src on GitHub</a><br>
 
 </body>
 </html>
