--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <button onclick='document.location.href="?fig=off"'>数字注釈を消す</button><fig-step>99 おおきな番号</fig-step><br>
 
 <br>
-<a href=https://github.com/code4fukui/>src on GitHub</a><br>
+<a href=https://github.com/code4fukui/fig-step/>src on GitHub</a><br>
 
 </body>
 </html>
